// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout:  renders a snapshot of <Layout /> 1`] = `
Array [
  <meta
    data-charset="UTF-8"
  />,
  <meta
    content="width=device-width, initial-scale=1.0"
    name="viewport"
  />,
  <meta
    content="KreateSell"
    name="title"
  />,
  <meta
    content="KreateSell"
    name="author"
  />,
  <meta
    content="#b8c1ec"
    name="theme-color"
  />,
  <meta
    content=""
    name="pagename"
  />,
  <meta
    content="https://kreatesell.com"
    name="url"
  />,
  <meta
    content="KreateSell"
    itemProp="name"
  />,
  <meta
    content="KreateSell"
    property="og:site_name"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="https://kreatesell.com"
    property="og:url"
  />,
  <meta
    content="KreateSell"
    property="og:title"
  />,
  <meta
    content=""
    property="og:description"
  />,
  <meta
    content="summary"
    property="twitter:card"
  />,
  <meta
    content="https://kreatesell.com"
    property="twitter:url"
  />,
  <meta
    content="KreateSell"
    property="twitter:title"
  />,
  <meta
    content="@KreateSell"
    name="twitter:site"
  />,
  <meta
    content="@KreateSell"
    name="twitter:creator"
  />,
  <meta
    content="A picture of KreateSell"
    property="twitter:image:alt"
  />,
  <meta
    content="e-commerce"
    name="keywords"
  />,
  <meta
    content="KreateSell , Sell more, Do less"
    name="description"
  />,
  <link
    href="/favicon.ico"
    rel="icon"
  />,
  <title>
    KreateSell
  </title>,
  <nav
    className="navContainer false"
  >
    <div
      className="mobileMenuCont false"
      onClick={[Function]}
    >
      <div
        className="hamburger"
      />
    </div>
    <a
      className="imgCont"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": "10px",
            "padding": "20px 0 10px 0",
          }
        }
      >
        <div
          className="ant-image"
          style={
            Object {
              "height": undefined,
              "width": 170,
            }
          }
        >
          <img
            className="ant-image-img"
            onError={[Function]}
            onLoad={[Function]}
            src="/images/logo.svg"
            style={
              Object {
                "height": undefined,
              }
            }
          />
        </div>
      </div>
    </a>
    <div
      className="MobileLogo"
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": "10px",
            "padding": "20px 0 10px 0.5rem",
          }
        }
      >
        <div
          className="ant-image"
          style={
            Object {
              "height": undefined,
              "width": 130,
            }
          }
        >
          <img
            className="ant-image-img"
            onError={[Function]}
            onLoad={[Function]}
            src="/images/logo.svg"
            style={
              Object {
                "height": undefined,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="navLinks"
    >
      <ul
        className="categoryLinks"
      >
        <li
          className="drop"
          onClick={[Function]}
        >
          <span
            className="navLinkDrop"
          >
            Resources
          </span>
          <img
            src="[jest.find('../utils')]"
          />
        </li>
        <li>
          <a
            className=""
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
        </li>
        <li>
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
        </li>
        <li>
          <a
            className=""
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
        </li>
        <li>
          <a
            className=""
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQS
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden"
    >
      <ul
        className="mobileCategoryLinks"
      >
        <li
          onClick={[Function]}
        >
          How it works
        </li>
        <li
          onClick={[Function]}
        >
          Features
        </li>
        <li
          onClick={[Function]}
        >
          Pricing
        </li>
        <li
          onClick={[Function]}
        >
          Blog
        </li>
        <li
          onClick={[Function]}
        >
          FAQs
        </li>
      </ul>
      <div
        className="mobileInput"
      >
        <div
          className="undefined inputContainer"
        >
          <label
            className="label undefined"
          />
          <input
            className="undefined false false input"
            placeholder="Enter your email..."
            type=""
          />
        </div>
      </div>
      <div
        className="mobileButton"
      >
        <button
          className="
			freeBtn
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Get Started Free
          </div>
        </button>
      </div>
      <div
        className="benefits"
      >
        <span
          className="benefitSpan"
        >
          Signup for free
        </span>
        <span
          className="benefitSpan"
        >
          • Easy setup
        </span>
        <span
          className="benefitSpan"
        >
          • Fast payout
        </span>
      </div>
    </div>
    <div
      className="btnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup
          </div>
        </button>
      </div>
    </div>
    <div
      className="mobileBtnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup Free
          </div>
        </button>
      </div>
    </div>
  </nav>,
  <main>
    <div>
      mock Child
    </div>
  </main>,
  <footer
    className="footer"
  >
    <div
      className="footerCont"
    >
      <div
        className="brand"
      >
        <div
          className="brandTitle"
          onClick={[Function]}
        >
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="mailto:info@kreatesell.com"
            rel="noopener noreferrer"
            target="blank"
          >
            info@kreatesell.com
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="tel:+2347019875432"
            rel="noopener noreferrer"
            target="blank"
          >
            +2347019875432
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="https://www.google.com/maps/place/Cocoa+House+Ibadan/@7.3875478,3.8767496,17z/data=!3m1!4b1!4m5!3m4!1s0x10398d0e3452ea31:0x8da53949f2293130!8m2!3d7.3875425!4d3.8789383"
            rel="noopener noreferrer"
            target="blank"
          >
            Cocoa house Dugbe, Ibadan
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Product
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Home
          </a>
          <a
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
          <a
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliates
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Company
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            About
          </a>
          <a
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Press
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Careers
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Integration
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Support
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Getting Started
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="https://wa.me/+2349016324945"
          >
            Contact Support
          </a>
          <a
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQ
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Legal
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/legal/cookie-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Cookies Policy
          </a>
          <a
            href="/legal/privacy-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Privacy Policy
          </a>
          <a
            href="/legal/affiliate-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliate Policy
          </a>
          <a
            href="/legal/terms-of-service"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Terms of Service
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Follow us
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Facebook
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Twitter
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Instagram
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Linkedin
          </a>
        </div>
      </div>
    </div>
    <div
      className="mobileFooter"
    >
      <div
        className="firstRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Product
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Pricing
            </a>
            <a
              href="/features"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Features
            </a>
            <a
              href="/how-it-works"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliates
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Releases
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Company
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Blog
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Press
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Careers
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Integration
            </a>
          </div>
        </div>
      </div>
      <div
        className="secondRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Support
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Getting Started
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Tutorials
            </a>
            <a
              href="https://wa.me/+2349016324945"
            >
              Contact Support
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              FAQ
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Legal
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/legal/cookie-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Cookies Policy
            </a>
            <a
              href="/legal/privacy-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Privacy Policy
            </a>
            <a
              href="/legal/affiliate-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliate Policy
            </a>
            <a
              href="/legal/terms-of-service"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Terms of Service
            </a>
          </div>
        </div>
      </div>
      <span
        className="thinLine"
      />
      <div
        className="brandMobile"
      >
        <img
          src="[jest.find('../utils')]"
        />
        <a
          className="mobileFooterEmail"
          href="mailto:info@kreatesell.com"
          rel="noopener noreferrer"
          target="blank"
        >
          info@kreatesell.com
        </a>
        <div
          className="engageUs"
        >
          Engage with us
        </div>
        <div
          className="mobileSocialLinks"
        >
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="mobileAddress"
        >
          Cocoa house Dugbe, Ibadan
        </div>
        <div
          className="mobileCopyright"
        >
          Copyright © 
          2022
           Kreatesell. All Rights Reserved
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`Layout:  renders a snapshot of <Layout /> with mock props 1`] = `
Array [
  <meta
    data-charset="UTF-8"
  />,
  <meta
    content="width=device-width, initial-scale=1.0"
    name="viewport"
  />,
  <meta
    content="KreateSell"
    name="title"
  />,
  <meta
    content="KreateSell"
    name="author"
  />,
  <meta
    content="#b8c1ec"
    name="theme-color"
  />,
  <meta
    content=""
    name="pagename"
  />,
  <meta
    content="https://kreatesell.com"
    name="url"
  />,
  <meta
    content="KreateSell"
    itemProp="name"
  />,
  <meta
    content="KreateSell"
    property="og:site_name"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="https://kreatesell.com"
    property="og:url"
  />,
  <meta
    content="KreateSell"
    property="og:title"
  />,
  <meta
    content=""
    property="og:description"
  />,
  <meta
    content="summary"
    property="twitter:card"
  />,
  <meta
    content="https://kreatesell.com"
    property="twitter:url"
  />,
  <meta
    content="KreateSell"
    property="twitter:title"
  />,
  <meta
    content="@KreateSell"
    name="twitter:site"
  />,
  <meta
    content="@KreateSell"
    name="twitter:creator"
  />,
  <meta
    content="A picture of KreateSell"
    property="twitter:image:alt"
  />,
  <meta
    content="mock keywords"
    name="keywords"
  />,
  <meta
    content="This is a mock description"
    name="description"
  />,
  <link
    href="/favicon.ico"
    rel="icon"
  />,
  <title>
    mockTitle
  </title>,
  <nav
    className="navContainer false"
  >
    <div
      className="mobileMenuCont false"
      onClick={[Function]}
    >
      <div
        className="hamburger"
      />
    </div>
    <a
      className="imgCont"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": "10px",
            "padding": "20px 0 10px 0",
          }
        }
      >
        <div
          className="ant-image"
          style={
            Object {
              "height": undefined,
              "width": 170,
            }
          }
        >
          <img
            className="ant-image-img"
            onError={[Function]}
            onLoad={[Function]}
            src="/images/logo.svg"
            style={
              Object {
                "height": undefined,
              }
            }
          />
        </div>
      </div>
    </a>
    <div
      className="MobileLogo"
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": "10px",
            "padding": "20px 0 10px 0.5rem",
          }
        }
      >
        <div
          className="ant-image"
          style={
            Object {
              "height": undefined,
              "width": 130,
            }
          }
        >
          <img
            className="ant-image-img"
            onError={[Function]}
            onLoad={[Function]}
            src="/images/logo.svg"
            style={
              Object {
                "height": undefined,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="navLinks"
    >
      <ul
        className="categoryLinks"
      >
        <li
          className="drop"
          onClick={[Function]}
        >
          <span
            className="navLinkDrop"
          >
            Resources
          </span>
          <img
            src="[jest.find('../utils')]"
          />
        </li>
        <li>
          <a
            className=""
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
        </li>
        <li>
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
        </li>
        <li>
          <a
            className=""
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
        </li>
        <li>
          <a
            className=""
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQS
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden"
    >
      <ul
        className="mobileCategoryLinks"
      >
        <li
          onClick={[Function]}
        >
          How it works
        </li>
        <li
          onClick={[Function]}
        >
          Features
        </li>
        <li
          onClick={[Function]}
        >
          Pricing
        </li>
        <li
          onClick={[Function]}
        >
          Blog
        </li>
        <li
          onClick={[Function]}
        >
          FAQs
        </li>
      </ul>
      <div
        className="mobileInput"
      >
        <div
          className="undefined inputContainer"
        >
          <label
            className="label undefined"
          />
          <input
            className="undefined false false input"
            placeholder="Enter your email..."
            type=""
          />
        </div>
      </div>
      <div
        className="mobileButton"
      >
        <button
          className="
			freeBtn
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Get Started Free
          </div>
        </button>
      </div>
      <div
        className="benefits"
      >
        <span
          className="benefitSpan"
        >
          Signup for free
        </span>
        <span
          className="benefitSpan"
        >
          • Easy setup
        </span>
        <span
          className="benefitSpan"
        >
          • Fast payout
        </span>
      </div>
    </div>
    <div
      className="btnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup
          </div>
        </button>
      </div>
    </div>
    <div
      className="mobileBtnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup Free
          </div>
        </button>
      </div>
    </div>
  </nav>,
  <main
    className="layoutMargin"
  >
    <div>
      mock Child
    </div>
  </main>,
  <footer
    className="footer"
  >
    <div
      className="footerCont"
    >
      <div
        className="brand"
      >
        <div
          className="brandTitle"
          onClick={[Function]}
        >
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="mailto:info@kreatesell.com"
            rel="noopener noreferrer"
            target="blank"
          >
            info@kreatesell.com
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="tel:+2347019875432"
            rel="noopener noreferrer"
            target="blank"
          >
            +2347019875432
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="https://www.google.com/maps/place/Cocoa+House+Ibadan/@7.3875478,3.8767496,17z/data=!3m1!4b1!4m5!3m4!1s0x10398d0e3452ea31:0x8da53949f2293130!8m2!3d7.3875425!4d3.8789383"
            rel="noopener noreferrer"
            target="blank"
          >
            Cocoa house Dugbe, Ibadan
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Product
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Home
          </a>
          <a
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
          <a
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliates
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Company
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            About
          </a>
          <a
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Press
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Careers
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Integration
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Support
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Getting Started
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="https://wa.me/+2349016324945"
          >
            Contact Support
          </a>
          <a
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQ
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Legal
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/legal/cookie-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Cookies Policy
          </a>
          <a
            href="/legal/privacy-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Privacy Policy
          </a>
          <a
            href="/legal/affiliate-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliate Policy
          </a>
          <a
            href="/legal/terms-of-service"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Terms of Service
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Follow us
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Facebook
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Twitter
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Instagram
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Linkedin
          </a>
        </div>
      </div>
    </div>
    <div
      className="mobileFooter"
    >
      <div
        className="firstRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Product
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Pricing
            </a>
            <a
              href="/features"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Features
            </a>
            <a
              href="/how-it-works"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliates
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Releases
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Company
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Blog
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Press
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Careers
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Integration
            </a>
          </div>
        </div>
      </div>
      <div
        className="secondRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Support
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Getting Started
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Tutorials
            </a>
            <a
              href="https://wa.me/+2349016324945"
            >
              Contact Support
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              FAQ
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Legal
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/legal/cookie-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Cookies Policy
            </a>
            <a
              href="/legal/privacy-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Privacy Policy
            </a>
            <a
              href="/legal/affiliate-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliate Policy
            </a>
            <a
              href="/legal/terms-of-service"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Terms of Service
            </a>
          </div>
        </div>
      </div>
      <span
        className="thinLine"
      />
      <div
        className="brandMobile"
      >
        <img
          src="[jest.find('../utils')]"
        />
        <a
          className="mobileFooterEmail"
          href="mailto:info@kreatesell.com"
          rel="noopener noreferrer"
          target="blank"
        >
          info@kreatesell.com
        </a>
        <div
          className="engageUs"
        >
          Engage with us
        </div>
        <div
          className="mobileSocialLinks"
        >
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="mobileAddress"
        >
          Cocoa house Dugbe, Ibadan
        </div>
        <div
          className="mobileCopyright"
        >
          Copyright © 
          2022
           Kreatesell. All Rights Reserved
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`Layout:  renders a snapshot of <Layout /> with mock props and subFooter = true and defaultMarginTop = false  1`] = `
Array [
  <meta
    data-charset="UTF-8"
  />,
  <meta
    content="width=device-width, initial-scale=1.0"
    name="viewport"
  />,
  <meta
    content="KreateSell"
    name="title"
  />,
  <meta
    content="KreateSell"
    name="author"
  />,
  <meta
    content="#b8c1ec"
    name="theme-color"
  />,
  <meta
    content=""
    name="pagename"
  />,
  <meta
    content="https://kreatesell.com"
    name="url"
  />,
  <meta
    content="KreateSell"
    itemProp="name"
  />,
  <meta
    content="KreateSell"
    property="og:site_name"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="https://kreatesell.com"
    property="og:url"
  />,
  <meta
    content="KreateSell"
    property="og:title"
  />,
  <meta
    content=""
    property="og:description"
  />,
  <meta
    content="summary"
    property="twitter:card"
  />,
  <meta
    content="https://kreatesell.com"
    property="twitter:url"
  />,
  <meta
    content="KreateSell"
    property="twitter:title"
  />,
  <meta
    content="@KreateSell"
    name="twitter:site"
  />,
  <meta
    content="@KreateSell"
    name="twitter:creator"
  />,
  <meta
    content="A picture of KreateSell"
    property="twitter:image:alt"
  />,
  <meta
    content="mock keywords"
    name="keywords"
  />,
  <meta
    content="This is a mock description"
    name="description"
  />,
  <link
    href="/favicon.ico"
    rel="icon"
  />,
  <title>
    mockTitle
  </title>,
  <nav
    className="navContainer false"
  >
    <div
      className="mobileMenuCont false"
      onClick={[Function]}
    >
      <div
        className="hamburger"
      />
    </div>
    <a
      className="imgCont"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": "10px",
            "padding": "20px 0 10px 0",
          }
        }
      >
        <div
          className="ant-image"
          style={
            Object {
              "height": undefined,
              "width": 170,
            }
          }
        >
          <img
            className="ant-image-img"
            onError={[Function]}
            onLoad={[Function]}
            src="/images/logo.svg"
            style={
              Object {
                "height": undefined,
              }
            }
          />
        </div>
      </div>
    </a>
    <div
      className="MobileLogo"
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": "10px",
            "padding": "20px 0 10px 0.5rem",
          }
        }
      >
        <div
          className="ant-image"
          style={
            Object {
              "height": undefined,
              "width": 130,
            }
          }
        >
          <img
            className="ant-image-img"
            onError={[Function]}
            onLoad={[Function]}
            src="/images/logo.svg"
            style={
              Object {
                "height": undefined,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="navLinks"
    >
      <ul
        className="categoryLinks"
      >
        <li
          className="drop"
          onClick={[Function]}
        >
          <span
            className="navLinkDrop"
          >
            Resources
          </span>
          <img
            src="[jest.find('../utils')]"
          />
        </li>
        <li>
          <a
            className=""
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
        </li>
        <li>
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
        </li>
        <li>
          <a
            className=""
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
        </li>
        <li>
          <a
            className=""
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQS
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden"
    >
      <ul
        className="mobileCategoryLinks"
      >
        <li
          onClick={[Function]}
        >
          How it works
        </li>
        <li
          onClick={[Function]}
        >
          Features
        </li>
        <li
          onClick={[Function]}
        >
          Pricing
        </li>
        <li
          onClick={[Function]}
        >
          Blog
        </li>
        <li
          onClick={[Function]}
        >
          FAQs
        </li>
      </ul>
      <div
        className="mobileInput"
      >
        <div
          className="undefined inputContainer"
        >
          <label
            className="label undefined"
          />
          <input
            className="undefined false false input"
            placeholder="Enter your email..."
            type=""
          />
        </div>
      </div>
      <div
        className="mobileButton"
      >
        <button
          className="
			freeBtn
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Get Started Free
          </div>
        </button>
      </div>
      <div
        className="benefits"
      >
        <span
          className="benefitSpan"
        >
          Signup for free
        </span>
        <span
          className="benefitSpan"
        >
          • Easy setup
        </span>
        <span
          className="benefitSpan"
        >
          • Fast payout
        </span>
      </div>
    </div>
    <div
      className="btnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup
          </div>
        </button>
      </div>
    </div>
    <div
      className="mobileBtnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup Free
          </div>
        </button>
      </div>
    </div>
  </nav>,
  <main
    className={false}
  >
    <div>
      mock Child
    </div>
  </main>,
  <div
    className="subFooter"
  >
    <h3>
      Start making money 
      <br />
       with your content
    </h3>
    <div>
      <div>
        <form
          className="container"
        >
          <input
            name="email"
            placeholder="Enter your email..."
            type="text"
          />
          <button>
            <p
              className="btnText"
            >
              Get Started Free
            </p>
            <div
              className="btnIcon"
            >
              <svg
                fill="none"
                height="10"
                viewBox="0 0 13 10"
                width="13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M0.97144 4.45143C0.705203 4.48809 0.5 4.71969 0.5 4.99993C0.5 5.30564 0.744208 5.55347 1.04545 5.55347L10.6333 5.55347L7.16979 9.05423L7.11685 9.1162C6.95797 9.33257 6.97495 9.64013 7.1682 9.83706C7.38077 10.0537 7.72613 10.0544 7.93958 9.83868L12.3317 5.3998C12.3586 5.37364 12.3829 5.34471 12.4041 5.31346C12.5509 5.09748 12.5294 4.7992 12.3396 4.60737L7.93955 0.161287L7.87826 0.107824C7.66438 -0.0524988 7.36139 -0.0339699 7.16816 0.162973C6.95561 0.379612 6.95635 0.730097 7.16982 0.945805L10.6341 4.44638L1.04545 4.44638L0.97144 4.45143Z"
                  fill="white"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </button>
        </form>
      </div>
    </div>
  </div>,
  <footer
    className="footer"
  >
    <div
      className="footerCont"
    >
      <div
        className="brand"
      >
        <div
          className="brandTitle"
          onClick={[Function]}
        >
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="mailto:info@kreatesell.com"
            rel="noopener noreferrer"
            target="blank"
          >
            info@kreatesell.com
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="tel:+2347019875432"
            rel="noopener noreferrer"
            target="blank"
          >
            +2347019875432
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="https://www.google.com/maps/place/Cocoa+House+Ibadan/@7.3875478,3.8767496,17z/data=!3m1!4b1!4m5!3m4!1s0x10398d0e3452ea31:0x8da53949f2293130!8m2!3d7.3875425!4d3.8789383"
            rel="noopener noreferrer"
            target="blank"
          >
            Cocoa house Dugbe, Ibadan
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Product
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Home
          </a>
          <a
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
          <a
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliates
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Company
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            About
          </a>
          <a
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Press
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Careers
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Integration
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Support
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Getting Started
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="https://wa.me/+2349016324945"
          >
            Contact Support
          </a>
          <a
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQ
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Legal
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/legal/cookie-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Cookies Policy
          </a>
          <a
            href="/legal/privacy-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Privacy Policy
          </a>
          <a
            href="/legal/affiliate-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliate Policy
          </a>
          <a
            href="/legal/terms-of-service"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Terms of Service
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Follow us
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Facebook
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Twitter
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Instagram
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Linkedin
          </a>
        </div>
      </div>
    </div>
    <div
      className="mobileFooter"
    >
      <div
        className="firstRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Product
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Pricing
            </a>
            <a
              href="/features"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Features
            </a>
            <a
              href="/how-it-works"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliates
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Releases
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Company
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Blog
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Press
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Careers
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Integration
            </a>
          </div>
        </div>
      </div>
      <div
        className="secondRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Support
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Getting Started
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Tutorials
            </a>
            <a
              href="https://wa.me/+2349016324945"
            >
              Contact Support
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              FAQ
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Legal
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/legal/cookie-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Cookies Policy
            </a>
            <a
              href="/legal/privacy-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Privacy Policy
            </a>
            <a
              href="/legal/affiliate-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliate Policy
            </a>
            <a
              href="/legal/terms-of-service"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Terms of Service
            </a>
          </div>
        </div>
      </div>
      <span
        className="thinLine"
      />
      <div
        className="brandMobile"
      >
        <img
          src="[jest.find('../utils')]"
        />
        <a
          className="mobileFooterEmail"
          href="mailto:info@kreatesell.com"
          rel="noopener noreferrer"
          target="blank"
        >
          info@kreatesell.com
        </a>
        <div
          className="engageUs"
        >
          Engage with us
        </div>
        <div
          className="mobileSocialLinks"
        >
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="mobileAddress"
        >
          Cocoa house Dugbe, Ibadan
        </div>
        <div
          className="mobileCopyright"
        >
          Copyright © 
          2022
           Kreatesell. All Rights Reserved
        </div>
      </div>
    </div>
  </footer>,
]
`;
